# ScraperSky

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/scraper/: __init__.py  base.py  twitter.py
src/storage/: file_manager.py
